tests/ui/malformed_fragment.stderr
error: expected square brackets
  --> tests/ui/malformed_fragment.rs:82:34
   |
82 |     routes { Shared(OnBroken) => BrokenAt, }
   |                                  ^^^^^^^^
